--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
+    "koa2-proxy-middleware": "0.0.4",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "qrcode": "^1.5.1",
     "screenfull": "^5.1.0",
     "vue": "2.6.10",
+    "vue-i18n": "^8.22.2",
     "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
